--- a/test/data_preparation.ipynb
+++ b/test/data_preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "10b4ebab",
    "metadata": {},
    "outputs": [],
@@ -31,12 +31,12 @@
     "        result = result.append(df, ignore_index=True)\n",
     "# Drop rows with NaNs and write the output to a CSV file.\n",
     "result = result.dropna()\n",
-    "result.to_csv('crash_data.csv')"
+    "result.to_csv('data/crash_data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "fda0a89c",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "4  1673028.42  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,6 +149,14 @@
    "source": [
     "result.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15d26001",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
