Verification bug fixed and documentation added
An annoying bug in the iterative version of the verification function has been fixed. Doxygen-style code documentation has also been improved.

--- a/test/data_preparation.ipynb
+++ b/test/data_preparation.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fda0a89c",
    "metadata": {},
    "outputs": [
@@ -141,19 +141,332 @@
        "4  1673028.42  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result.head()"
+    "df = pd.read_csv('data/crash_data.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "15d26001",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xmin = 412237.37\n",
+      "ymin = 1314984.56\n",
+      "xmax = 1565697.23\n",
+      "ymax = 2660165.5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "xmin, ymin, xmax, ymax = np.min(df['ACCLOC_X']), np.min(df['ACCLOC_Y']), np.max(df['ACCLOC_X']), np.max(df['ACCLOC_Y'])\n",
+    "print('xmin = {}\\nymin = {}\\nxmax = {}\\nymax = {}\\n'.format(xmin, ymin, xmax, ymax))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91b9beb8",
+   "metadata": {},
+   "source": [
+    "Example of a query: find all accidents whose position $(x, y)$ is in the range $500000 \\leq x \\leq 600000 \\wedge 2000000 \\leq y \\leq 2100000$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f2d85de7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N. of records: 18\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>REPORT_ID</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>ACCLOC_X</th>\n",
+       "      <th>ACCLOC_Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5352</th>\n",
+       "      <td>2012-6232-27/05/2021</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>April</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>01:30 pm</td>\n",
+       "      <td>519828.80</td>\n",
+       "      <td>2035730.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26623</th>\n",
+       "      <td>2013-7448-27/05/2021</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>June</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>04:15 pm</td>\n",
+       "      <td>560303.08</td>\n",
+       "      <td>2037506.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47760</th>\n",
+       "      <td>2014-12075-27/05/2021</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>August</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>04:30 pm</td>\n",
+       "      <td>580712.99</td>\n",
+       "      <td>2040895.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49461</th>\n",
+       "      <td>2014-13784-27/05/2021</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>November</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>05:30 pm</td>\n",
+       "      <td>535640.18</td>\n",
+       "      <td>2037085.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59760</th>\n",
+       "      <td>2015-7930-27/05/2021</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>July</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>01:30 am</td>\n",
+       "      <td>589809.19</td>\n",
+       "      <td>2042645.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74204</th>\n",
+       "      <td>2016-6959-27/05/2021</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>April</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>10:00 pm</td>\n",
+       "      <td>516709.65</td>\n",
+       "      <td>2035448.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86431</th>\n",
+       "      <td>2017-2426-27/05/2021</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>March</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>03:00 pm</td>\n",
+       "      <td>521542.93</td>\n",
+       "      <td>2035885.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86702</th>\n",
+       "      <td>2017-2697-27/05/2021</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>March</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>10:20 am</td>\n",
+       "      <td>510147.26</td>\n",
+       "      <td>2033604.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93146</th>\n",
+       "      <td>2017-9143-27/05/2021</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>September</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>08:00 pm</td>\n",
+       "      <td>577669.60</td>\n",
+       "      <td>2040675.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104540</th>\n",
+       "      <td>2018-7301-27/05/2021</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>July</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>04:00 pm</td>\n",
+       "      <td>524981.75</td>\n",
+       "      <td>2036194.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105291</th>\n",
+       "      <td>2018-8052-27/05/2021</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>August</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>01:00 pm</td>\n",
+       "      <td>513105.00</td>\n",
+       "      <td>2047911.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106983</th>\n",
+       "      <td>2018-9746-27/05/2021</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>September</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>11:00 am</td>\n",
+       "      <td>566672.27</td>\n",
+       "      <td>2038517.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108429</th>\n",
+       "      <td>2018-11192-27/05/2021</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>October</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>12:30 pm</td>\n",
+       "      <td>514777.61</td>\n",
+       "      <td>2034944.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111956</th>\n",
+       "      <td>2019-1121-27/05/2021</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>February</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>01:15 am</td>\n",
+       "      <td>528123.00</td>\n",
+       "      <td>2036478.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115213</th>\n",
+       "      <td>2019-4378-27/05/2021</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>May</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>04:30 pm</td>\n",
+       "      <td>526381.36</td>\n",
+       "      <td>2036321.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123091</th>\n",
+       "      <td>2019-12256-27/05/2021</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>December</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>09:55 am</td>\n",
+       "      <td>582088.85</td>\n",
+       "      <td>2040997.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123267</th>\n",
+       "      <td>2019-12432-27/05/2021</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>December</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>04:50 pm</td>\n",
+       "      <td>593187.72</td>\n",
+       "      <td>2043813.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131726</th>\n",
+       "      <td>2020-7927-27/05/2021</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>September</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>11:30 pm</td>\n",
+       "      <td>501274.62</td>\n",
+       "      <td>2031037.02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    REPORT_ID  Year      Month        Day      Time  \\\n",
+       "5352     2012-6232-27/05/2021  2012      April   Thursday  01:30 pm   \n",
+       "26623    2013-7448-27/05/2021  2013       June  Wednesday  04:15 pm   \n",
+       "47760   2014-12075-27/05/2021  2014     August   Saturday  04:30 pm   \n",
+       "49461   2014-13784-27/05/2021  2014   November    Tuesday  05:30 pm   \n",
+       "59760    2015-7930-27/05/2021  2015       July  Wednesday  01:30 am   \n",
+       "74204    2016-6959-27/05/2021  2016      April  Wednesday  10:00 pm   \n",
+       "86431    2017-2426-27/05/2021  2017      March     Friday  03:00 pm   \n",
+       "86702    2017-2697-27/05/2021  2017      March   Saturday  10:20 am   \n",
+       "93146    2017-9143-27/05/2021  2017  September     Friday  08:00 pm   \n",
+       "104540   2018-7301-27/05/2021  2018       July  Wednesday  04:00 pm   \n",
+       "105291   2018-8052-27/05/2021  2018     August     Sunday  01:00 pm   \n",
+       "106983   2018-9746-27/05/2021  2018  September    Tuesday  11:00 am   \n",
+       "108429  2018-11192-27/05/2021  2018    October     Friday  12:30 pm   \n",
+       "111956   2019-1121-27/05/2021  2019   February    Tuesday  01:15 am   \n",
+       "115213   2019-4378-27/05/2021  2019        May     Sunday  04:30 pm   \n",
+       "123091  2019-12256-27/05/2021  2019   December  Wednesday  09:55 am   \n",
+       "123267  2019-12432-27/05/2021  2019   December     Friday  04:50 pm   \n",
+       "131726   2020-7927-27/05/2021  2020  September    Tuesday  11:30 pm   \n",
+       "\n",
+       "         ACCLOC_X    ACCLOC_Y  \n",
+       "5352    519828.80  2035730.93  \n",
+       "26623   560303.08  2037506.73  \n",
+       "47760   580712.99  2040895.29  \n",
+       "49461   535640.18  2037085.23  \n",
+       "59760   589809.19  2042645.41  \n",
+       "74204   516709.65  2035448.06  \n",
+       "86431   521542.93  2035885.25  \n",
+       "86702   510147.26  2033604.32  \n",
+       "93146   577669.60  2040675.26  \n",
+       "104540  524981.75  2036194.99  \n",
+       "105291  513105.00  2047911.96  \n",
+       "106983  566672.27  2038517.50  \n",
+       "108429  514777.61  2034944.73  \n",
+       "111956  528123.00  2036478.39  \n",
+       "115213  526381.36  2036321.27  \n",
+       "123091  582088.85  2040997.94  \n",
+       "123267  593187.72  2043813.91  \n",
+       "131726  501274.62  2031037.02  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = df[(df.ACCLOC_X >= 500000) & (df.ACCLOC_X <= 600000) & (df.ACCLOC_Y >= 2000000) & (df.ACCLOC_Y <= 2100000)]\n",
+    "print('N. of records: {}'.format(len(result)))\n",
+    "result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15d26001",
+   "id": "f4cda2e2",
    "metadata": {},
    "outputs": [],
    "source": []
