--- a/test/data_preparation.ipynb
+++ b/test/data_preparation.ipynb
@@ -13,11 +13,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "10b4ebab",
+   "cell_type": "raw",
+   "id": "fcf99280",
    "metadata": {},
-   "outputs": [],
    "source": [
     "year_min = 2012\n",
     "year_max = 2020\n",
@@ -36,10 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "fda0a89c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "135333\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -141,19 +146,20 @@
        "4  1673028.42  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('data/crash_data.csv')\n",
+    "print(len(df))\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "15d26001",
    "metadata": {},
    "outputs": [
@@ -184,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "f2d85de7",
    "metadata": {},
    "outputs": [
@@ -452,7 +458,7 @@
        "131726  501274.62  2031037.02  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "510c2fa1",
    "metadata": {},
    "outputs": [],
@@ -480,28 +486,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03114b5d",
+   "metadata": {},
+   "source": [
+    "# Generate test data sets\n",
+    "\n",
+    "Generate test data sets with sizes $10^3 \\leq m \\leq 10^5$. \n",
+    "Each data set contains $m$ random records selected from <code>crash_data.csv</code>."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c67cd483",
+   "execution_count": 35,
+   "id": "df87092d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2000029556723046\n"
+      "[1000, 5125, 9250, 13375, 17500, 21625, 25750, 29875, 34000, 38125, 42250, 46375, 50500, 54625, 58750, 62875, 67000, 71125, 75250, 79375, 83500, 87625, 91750, 95875, 100000]\n"
      ]
     }
    ],
    "source": [
-    "# Sample 20% of records\n",
-    "x = df.sample(frac=0.2)\n",
-    "print(len(x)/len(df))"
+    "sizes = [int(x) for x in np.linspace(1000, 100000, 25)]\n",
+    "print(sizes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "fa182c51",
    "metadata": {},
    "outputs": [
@@ -509,20 +525,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9997931029386772\n"
+      "Done!\n"
      ]
     }
    ],
    "source": [
-    "r = bounding_rect(x)\n",
-    "res = range_query(df, r[0], r[1], r[2], r[3])\n",
-    "print(len(res)/len(df))"
+    "for m in sizes:\n",
+    "    sampled_df = df.sample(n=m).reset_index(drop=True)\n",
+    "    sampled_df.to_csv('data/crash_data_{}.csv'.format(m), index=False)\n",
+    "print('Done!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "56479e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = 30000\n",
+    "sampled_df = df.sample(n=m).reset_index(drop=True)\n",
+    "sampled_df.to_csv('data/crash_data_{}.csv'.format(m), index=False)\n",
+    "print('Done!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56479e30",
+   "id": "54c15b26",
    "metadata": {},
    "outputs": [],
    "source": []
