--- a/test/data_preparation.ipynb
+++ b/test/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "895c1197",
    "metadata": {},
    "outputs": [],
@@ -13,11 +13,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e9b7a3c3",
+   "cell_type": "markdown",
+   "id": "dbfe3ffa",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Main data set generation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54597672",
+   "metadata": {},
+   "source": [
+    "We generate a single test data set starting from the original South Australia CSV files."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c6664bd5",
+   "metadata": {},
    "source": [
     "year_min = 2012\n",
     "year_max = 2020\n",
@@ -42,8 +56,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b75d433",
+   "metadata": {},
+   "source": [
+    "Import the generated data set and print some rows."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "a66277f2",
    "metadata": {},
    "outputs": [
@@ -51,7 +73,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of records: 135333\n"
+      "Number of records = 135333\n",
+      "xmin = 41223737\n",
+      "ymin = 131498456\n",
+      "xmax = 156569723\n",
+      "ymax = 266016550\n",
+      "\n"
      ]
     },
     {
@@ -148,343 +175,29 @@
        "4  2012-5-27/05/2021  2012  January  Wednesday  03:30 pm  132605645  167302842"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('data/crash_data.csv')\n",
-    "print('Number of records: {}'.format(len(df)))\n",
+    "print('Number of records = {}'.format(len(df)))\n",
+    "xmin, ymin, xmax, ymax = np.min(df['x']), np.min(df['y']), np.max(df['x']), np.max(df['y'])\n",
+    "print('xmin = {}\\nymin = {}\\nxmax = {}\\nymax = {}\\n'.format(xmin, ymin, xmax, ymax))\n",
     "df.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "15d26001",
+   "cell_type": "raw",
+   "id": "91476d98",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xmin = 41223737\n",
-      "ymin = 131498456\n",
-      "xmax = 156569723\n",
-      "ymax = 266016550\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "xmin, ymin, xmax, ymax = np.min(df['x']), np.min(df['y']), np.max(df['x']), np.max(df['y'])\n",
-    "print('xmin = {}\\nymin = {}\\nxmax = {}\\nymax = {}\\n'.format(xmin, ymin, xmax, ymax))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "91b9beb8",
-   "metadata": {},
-   "source": [
-    "Example of a query: find all accidents whose position $(x, y)$ is in the range $50000000 \\leq x \\leq 60000000 \\wedge 200000000 \\leq y \\leq 210000000$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "f2d85de7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N. of records: 18\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Day</th>\n",
-       "      <th>Time</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5352</th>\n",
-       "      <td>2012-6232-27/05/2021</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>April</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>01:30 pm</td>\n",
-       "      <td>51982880</td>\n",
-       "      <td>203573093</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26623</th>\n",
-       "      <td>2013-7448-27/05/2021</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>June</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>04:15 pm</td>\n",
-       "      <td>56030307</td>\n",
-       "      <td>203750673</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47760</th>\n",
-       "      <td>2014-12075-27/05/2021</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>August</td>\n",
-       "      <td>Saturday</td>\n",
-       "      <td>04:30 pm</td>\n",
-       "      <td>58071299</td>\n",
-       "      <td>204089529</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49461</th>\n",
-       "      <td>2014-13784-27/05/2021</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>November</td>\n",
-       "      <td>Tuesday</td>\n",
-       "      <td>05:30 pm</td>\n",
-       "      <td>53564018</td>\n",
-       "      <td>203708523</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59760</th>\n",
-       "      <td>2015-7930-27/05/2021</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>July</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>01:30 am</td>\n",
-       "      <td>58980918</td>\n",
-       "      <td>204264541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74204</th>\n",
-       "      <td>2016-6959-27/05/2021</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>April</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>10:00 pm</td>\n",
-       "      <td>51670965</td>\n",
-       "      <td>203544806</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86431</th>\n",
-       "      <td>2017-2426-27/05/2021</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>March</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>03:00 pm</td>\n",
-       "      <td>52154293</td>\n",
-       "      <td>203588525</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86702</th>\n",
-       "      <td>2017-2697-27/05/2021</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>March</td>\n",
-       "      <td>Saturday</td>\n",
-       "      <td>10:20 am</td>\n",
-       "      <td>51014726</td>\n",
-       "      <td>203360432</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93146</th>\n",
-       "      <td>2017-9143-27/05/2021</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>September</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>08:00 pm</td>\n",
-       "      <td>57766960</td>\n",
-       "      <td>204067526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104540</th>\n",
-       "      <td>2018-7301-27/05/2021</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>July</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>04:00 pm</td>\n",
-       "      <td>52498175</td>\n",
-       "      <td>203619499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105291</th>\n",
-       "      <td>2018-8052-27/05/2021</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>August</td>\n",
-       "      <td>Sunday</td>\n",
-       "      <td>01:00 pm</td>\n",
-       "      <td>51310500</td>\n",
-       "      <td>204791196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106983</th>\n",
-       "      <td>2018-9746-27/05/2021</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>September</td>\n",
-       "      <td>Tuesday</td>\n",
-       "      <td>11:00 am</td>\n",
-       "      <td>56667227</td>\n",
-       "      <td>203851750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108429</th>\n",
-       "      <td>2018-11192-27/05/2021</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>October</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>12:30 pm</td>\n",
-       "      <td>51477761</td>\n",
-       "      <td>203494473</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111956</th>\n",
-       "      <td>2019-1121-27/05/2021</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>February</td>\n",
-       "      <td>Tuesday</td>\n",
-       "      <td>01:15 am</td>\n",
-       "      <td>52812300</td>\n",
-       "      <td>203647839</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115213</th>\n",
-       "      <td>2019-4378-27/05/2021</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>May</td>\n",
-       "      <td>Sunday</td>\n",
-       "      <td>04:30 pm</td>\n",
-       "      <td>52638136</td>\n",
-       "      <td>203632127</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123091</th>\n",
-       "      <td>2019-12256-27/05/2021</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>December</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>09:55 am</td>\n",
-       "      <td>58208885</td>\n",
-       "      <td>204099794</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123267</th>\n",
-       "      <td>2019-12432-27/05/2021</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>December</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>04:50 pm</td>\n",
-       "      <td>59318772</td>\n",
-       "      <td>204381391</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131726</th>\n",
-       "      <td>2020-7927-27/05/2021</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>September</td>\n",
-       "      <td>Tuesday</td>\n",
-       "      <td>11:30 pm</td>\n",
-       "      <td>50127462</td>\n",
-       "      <td>203103702</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           ID  Year      Month        Day      Time         x  \\\n",
-       "5352     2012-6232-27/05/2021  2012      April   Thursday  01:30 pm  51982880   \n",
-       "26623    2013-7448-27/05/2021  2013       June  Wednesday  04:15 pm  56030307   \n",
-       "47760   2014-12075-27/05/2021  2014     August   Saturday  04:30 pm  58071299   \n",
-       "49461   2014-13784-27/05/2021  2014   November    Tuesday  05:30 pm  53564018   \n",
-       "59760    2015-7930-27/05/2021  2015       July  Wednesday  01:30 am  58980918   \n",
-       "74204    2016-6959-27/05/2021  2016      April  Wednesday  10:00 pm  51670965   \n",
-       "86431    2017-2426-27/05/2021  2017      March     Friday  03:00 pm  52154293   \n",
-       "86702    2017-2697-27/05/2021  2017      March   Saturday  10:20 am  51014726   \n",
-       "93146    2017-9143-27/05/2021  2017  September     Friday  08:00 pm  57766960   \n",
-       "104540   2018-7301-27/05/2021  2018       July  Wednesday  04:00 pm  52498175   \n",
-       "105291   2018-8052-27/05/2021  2018     August     Sunday  01:00 pm  51310500   \n",
-       "106983   2018-9746-27/05/2021  2018  September    Tuesday  11:00 am  56667227   \n",
-       "108429  2018-11192-27/05/2021  2018    October     Friday  12:30 pm  51477761   \n",
-       "111956   2019-1121-27/05/2021  2019   February    Tuesday  01:15 am  52812300   \n",
-       "115213   2019-4378-27/05/2021  2019        May     Sunday  04:30 pm  52638136   \n",
-       "123091  2019-12256-27/05/2021  2019   December  Wednesday  09:55 am  58208885   \n",
-       "123267  2019-12432-27/05/2021  2019   December     Friday  04:50 pm  59318772   \n",
-       "131726   2020-7927-27/05/2021  2020  September    Tuesday  11:30 pm  50127462   \n",
-       "\n",
-       "                y  \n",
-       "5352    203573093  \n",
-       "26623   203750673  \n",
-       "47760   204089529  \n",
-       "49461   203708523  \n",
-       "59760   204264541  \n",
-       "74204   203544806  \n",
-       "86431   203588525  \n",
-       "86702   203360432  \n",
-       "93146   204067526  \n",
-       "104540  203619499  \n",
-       "105291  204791196  \n",
-       "106983  203851750  \n",
-       "108429  203494473  \n",
-       "111956  203647839  \n",
-       "115213  203632127  \n",
-       "123091  204099794  \n",
-       "123267  204381391  \n",
-       "131726  203103702  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = df[(df.x >= 50000000) & (df.x <= 60000000) & (df.y >= 200000000) & (df.y <= 210000000)]\n",
-    "print('N. of records: {}'.format(len(result)))\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "510c2fa1",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def range_query(df, lx, ly, ux, uy):\n",
-    "    return (df[(df.ACCLOC_X >= lx) & (df.ACCLOC_X <= ux) & \n",
-    "              (df.ACCLOC_Y >= ly) & (df.ACCLOC_Y <= uy)])\n",
+    "    return (df[(df.x >= lx) & (df.x <= ux) & (df.y >= ly) & (df.y <= uy)])\n",
     "\n",
     "def bounding_rect(df):\n",
-    "    return (np.min(df['x']), np.min(df['y']), \n",
-    "            np.max(df['x']), np.max(df['y']))"
+    "    return (np.min(df['x']), np.min(df['y']), np.max(df['x']), np.max(df['y']))"
    ]
   },
   {
@@ -500,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "df87092d",
    "metadata": {},
    "outputs": [
@@ -519,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "fa182c51",
    "metadata": {},
    "outputs": [
@@ -539,8 +252,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b870da84",
+   "metadata": {},
+   "source": [
+    "Generate a test data set with $m=30000$ randomly sampled records. This will be used for tests on capacity and query/verification purposes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "56479e30",
    "metadata": {},
    "outputs": [
@@ -558,14 +279,6 @@
     "sampled_df.to_csv('data/crash_data_{}.csv'.format(m), index=False)\n",
     "print('Done!')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54c15b26",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
