--- a/test/data_preparation.ipynb
+++ b/test/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "895c1197",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "a66277f2",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "4  2012-5-27/05/2021  2012  January  Wednesday  03:30 pm  132605645  167302842"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,6 +186,27 @@
     "xmin, ymin, xmax, ymax = np.min(df['x']), np.min(df['y']), np.max(df['x']), np.max(df['y'])\n",
     "print('xmin = {}\\nymin = {}\\nxmax = {}\\nymax = {}\\n'.format(xmin, ymin, xmax, ymax))\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "04efb144",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(df['Time'].apply(lambda x: len(x)))"
    ]
   },
   {
